--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     font-family: system-ui;
     background-size: cover;
     background-attachment: fixed;
+    scroll-behavior: smooth;
 
 }
 .container{
@@ -16,9 +17,59 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
+
+/* Górne menu */
+.navbar{ 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 3em;
+    background-color: rgb(197, 75, 75);
+    position: absolute;
+}
+.navbar ul{
+    width: 100%;
+    display: flex;
+    height: 100%;
+    place-items: center;
+}
+.navbar ul li{
+    width: 100%;
+    margin-left: -32px;
+    display: flex;
+}
+.navbar a{
+    display: flex;
+    width: 100%;
+    height: 3em;
+    place-items: center;
+    text-decoration: none;
+    color: white;
+    justify-content: center;
+    transition: all 0.1s ease-in-out;
+}
+.navbar a:hover{
+    background-color: rgb(73, 4, 8);
+    font-weight: 700;
+    transition: all 0.1s ease-in-out;
+}
+
+/* Ogólne */
 section{
     width: 100%;
     margin-bottom: 50px;
+}
+
+#description{
+    display: flex;
+    color: white;
+    text-align: center;
+}
+
+hr{
+    width: 100%;
+    color: black;
+    margin-top: 30px;
 }
 
 h1{
@@ -40,12 +91,18 @@ h1:hover{
     transition: all 0.3s;
     letter-spacing: 1px;
 }
+
+/* Wyszukiwarka */
 #form{
     transition: all 0.3s;
     width: 50%;
     display: flex;
     margin-left: auto;
     margin-right: auto;
+}
+
+#searching{
+    margin-top: 65px;
 }
 
 #search_icon{
@@ -62,6 +119,7 @@ h1:hover{
     transition: all 0.3s;
 }
 
+/* Menu filtrów */
 #filters{
     top: 0;
     left: 0;
@@ -113,16 +171,7 @@ h1:hover{
     background-color: rgb(73, 4, 8);
 }
 
-#description{
-    display: flex;
-    color: white;
-    text-align: center;
-}
-hr{
-    width: 100%;
-    color: black;
-    margin-top: 30px;
-}
+/* Wyniki wyszukiwania */
 #videos{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -130,7 +179,17 @@ hr{
     place-items: center;
 }
 
+/* Formularz kontaktowy */
+#kontakt{
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
+#kontakt input, textarea{
+    margin-top: 20px;
+}
 
+/* Responsywność */
 @media (max-width: 480px){
     h1{
         font-size: 100%;
