--- a/style.css
+++ b/style.css
@@ -18,6 +18,16 @@ body{
     margin-right: auto;
 }
 
+/* Scrollbar */
+::-webkit-scrollbar {
+    width: 10px;
+    background: grey;
+}
+::-webkit-scrollbar-thumb{
+    background: rgb(207, 207, 207);
+    border-radius: 30px;
+}
+
 /* Górne menu */
 .navbar{ 
     left: 0;
@@ -53,8 +63,21 @@ body{
     font-weight: 700;
     transition: all 0.1s ease-in-out;
 }
+.navbar button{
+    width: 100%;
+    height: 100%;
+    border: 0;
+    background-color: rgb(197, 75, 75);
+    color: white;
+}
+.navbar button:hover{
+    background-color: rgb(73, 4, 8);
+    font-weight: 700;
+    transition: all 0.1s ease-in-out;
+}
 
 /* Ogólne */
+
 section{
     width: 100%;
     margin-bottom: 50px;
@@ -178,9 +201,16 @@ h1:hover{
     row-gap: 20px;
     place-items: center;
 }
-
+#videos iframe{
+    box-shadow: 0px 0px 10px rgb(0, 0, 0);
+}
+#videos iframe:hover{
+    transition: all 0.15s ease-out;
+    box-shadow: 0px 0px 15px rgb(177, 84, 84);
+}
 /* Formularz kontaktowy */
 #kontakt{
+    display: block;
     width: 50%;
     margin-left: auto;
     margin-right: auto;
@@ -193,6 +223,10 @@ h1:hover{
 @media (max-width: 480px){
     h1{
         font-size: 100%;
+    }
+    #videos iframe{
+        width: 310px;
+        height: 200px;
     }
 }
 @media (max-width:240px){
