--- a/style.css
+++ b/style.css
@@ -28,6 +28,52 @@ body{
     border-radius: 30px;
 }
 
+#top-page {
+    visibility: hidden;
+    display: block;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 1;
+    border: none;
+    outline: none;
+    background-color: rgb(197, 75, 75);
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 15px;
+}
+#top-page{
+    transition: all 0.2s ease-in-out;
+}
+
+#top-page:hover {
+    background-color: rgb(73, 4, 8);
+}
+.arrow-5 {
+    width:30px;
+    height:30px;
+    display: grid;
+    overflow: hidden;
+    transform: rotate(270deg);
+}
+.arrow-5:before, .arrow-5:after {
+    content: "";
+    grid-area: 1/1;
+    background: currentColor;
+    clip-path: polygon(0 10px,calc(100% - 15px) 10px,calc(100% - 15px) 0,100% 50%,calc(100% - 15px) 100%,calc(100% - 15px) calc(100% - 10px),0 calc(100% - 10px));
+    animation: a5 1s infinite;
+    transform: translate(calc(0% + var(--s,0%)));
+}
+
+.arrow-5:after {
+    --s:-100%;
+}
+
+@keyframes a5 {
+    80%,100%{transform: translate(calc(100% + var(--s,0%)))}
+}
+
 /* Górne menu */
 .navbar{ 
     left: 0;
@@ -35,7 +81,8 @@ body{
     width: 100%;
     height: 3em;
     background-color: rgb(197, 75, 75);
-    position: absolute;
+    position: fixed;
+    z-index: 1;
 }
 .navbar ul{
     width: 100%;
@@ -252,19 +299,7 @@ h1:hover{
     }
 }
 @media(max-width: 370px){
-    #form{
-        display: block;
-    }
-    #search_icon{
-        display: flex;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 10px;
-        border-radius: 10px;
-    }
-    #search{
-        border-radius: 10px;
-    }
+
     
 }
 @media(max-width:1600px){
