--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ h1:hover{
 /* Wyszukiwarka */
 #search-bar{
     transition: all 0.3s;
-    width: 50%;
+    width: 50.6%;
     display: flex;
     margin-left: auto;
     margin-right: auto;
@@ -295,15 +295,60 @@ input[type=date]::-webkit-calendar-picker-indicator{
 
 /* Formularz kontaktowy */
 #kontakt{
+    margin: 40% auto 0px auto;
     display: block;
     width: 50%;
-    margin-left: auto;
-    margin-right: auto;
+}
+#kontakt h1:hover{
+    letter-spacing: 0px;
 }
 #kontakt input, textarea{
     margin-top: 20px;
 }
+#kontakt #file{
+    width: 100%;
+}
 
+
+.hide {
+    overflow: hidden;
+    width: 0%;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    -moz-transition-duration: 0.3s;
+    -webkit-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -moz-transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+    -webkit-transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+    -o-transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+}
+.show {
+    transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -webkit-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-timing-function: ease-in;
+    -moz-transition-timing-function: ease-in;
+    -webkit-transition-timing-function: ease-in;
+    -o-transition-timing-function: ease-in;
+    width: 34.45%;
+    overflow: hidden;
+}
+
+#slideiniframe {
+    height: 100%;
+    position: fixed;
+    border: none;
+    margin: 0;
+    top: 0;
+    right: 0;
+    background-color: rgb(138, 73, 73);
+    max-width: 800px;
+}
 
 /* Responsywność */
 @media (max-width: 480px){
@@ -327,6 +372,7 @@ input[type=date]::-webkit-calendar-picker-indicator{
         font-size: 90%;
     }
 }
+
 @media (max-width:240px){
     h1{
         display: block;
@@ -336,11 +382,21 @@ input[type=date]::-webkit-calendar-picker-indicator{
 
     
 }
+
 @media(max-width:1600px){
     #videos{
         grid-template-columns: repeat(2, 1fr);
     }
+    .show{
+        width: 80%;
+    }
 }
+@media(max-width:700px){
+    #kontakt{
+        width: 80%;
+    }
+}
+
 @media(max-width:1130px){
 
 }
