--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body{
     height: 3em;
     background-color: rgb(197, 75, 75);
     position: fixed;
-    z-index: 1;
+    z-index: 3;
 }
 .navbar ul{
     width: 100%;
@@ -291,14 +291,26 @@ input[type=date]::-webkit-calendar-picker-indicator{
     color: white;
     margin-top: auto;
     margin-bottom: auto;
-
 }
+#videos .video-details #title{
+    font-size: 130%;
+}
+#videos .video-details img{
+    width: 50px;
+    border-radius: 30px;
+}
+#videos .video-details #description{
+    color: grey;
+    font-size: 80%;
+}
+
 .video-container{
     box-shadow: 0px 0px 10px black;
     background-color: rgba(0, 0, 0, 0.514);
     display: flex;
     flex-direction: row;
 }
+
 .video-container:hover{
     transition: all 0.15s ease-out;
     box-shadow: 0px 0px 15px rgb(177, 84, 84);
@@ -321,6 +333,11 @@ input[type=date]::-webkit-calendar-picker-indicator{
 }
 #kontakt #file{
     width: 100%;
+}
+#kontakt b{
+    font-weight: 400;
+    color: white;
+    cursor: default;
 }
 
 .hide {
@@ -352,7 +369,8 @@ input[type=date]::-webkit-calendar-picker-indicator{
     overflow: hidden;
 }
 
-#slideiniframe {
+#slidein {
+    z-index: 1;
     height: 100%;
     position: fixed;
     border: none;
@@ -365,6 +383,7 @@ input[type=date]::-webkit-calendar-picker-indicator{
 
 /* Footer */
 footer{
+    z-index: 0;
     background-color: rgba(62, 62, 63, 0.418);
     color: rgb(255, 255, 255);
     height: 5vh;
