--- a/style.css
+++ b/style.css
@@ -166,6 +166,22 @@ h1:hover{
     letter-spacing: 1px;
 }
 
+[hidden]{
+    display: none;
+}
+#loading{
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+#loading-2{
+    color: white;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+}
+
 /* Wyszukiwarka */
 #search-bar{
     transition: all 0.3s;
@@ -315,8 +331,17 @@ input[type=date]::-webkit-calendar-picker-indicator{
     transition: all 0.15s ease-out;
     box-shadow: 0px 0px 15px rgb(177, 84, 84);
 }
+
 #videos hr{
     margin-bottom: 30px;
+}
+
+#videos .video-details a{
+    color: white;
+    text-decoration: none;
+}
+#channel{
+    margin-bottom: 20px;
 }
 
 /* Formularz kontaktowy */
