--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-
+    opacity: 1;
 }
 .container{
     flex: 1;
@@ -20,6 +20,7 @@ body{
     padding: 0;
     margin-left: auto;
     margin-right: auto;
+    opacity: 1;
 }
 
 /* Scrollbar */
@@ -470,6 +471,13 @@ footer .footer-1{
 }
 footer .footer-2{
     margin-left: 20px;
+}
+
+footer #additionalbackground-bottom{
+    position: absolute;
+    width: 100%;
+    z-index: -1;
+    opacity: 0.2;
 }
 
 /* Responsywność */
